# repo-airlock

./: .airlock-baseline.json  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/repo_airlock/: __init__.py  baseline.py  cli.py  findings.py  history.py  redact.py  report.py  scanner.py  walker.py
src/repo_airlock/detectors/: __init__.py  base.py  cred_files.py  hygiene.py  privacy.py  secrets.py
tests/: test_baseline.py  test_cli.py  test_cred_files_detector.py  test_findings.py  test_history.py  test_hygiene_detector.py  test_privacy_detector.py  test_redact.py  test_scanner.py  test_secrets_detector.py  test_self_scan.py
tests/fixtures/: clean_file.py  fake_privacy.txt  fake_secrets.txt
