[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-airlock"
version = "0.1.0"
description = "Pre-publication scanner: run your repo through the airlock before you make it public."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Andrew Lazzeroni", email = "andrewlazz8@gmail.com" },
]
keywords = ["security", "secrets", "privacy", "git", "open-source", "cli", "pre-publish", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/AgentJDrew/repo-airlock"
Issues = "https://github.com/AgentJDrew/repo-airlock/issues"

[project.scripts]
airlock = "repo_airlock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
